--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "preview": "vitepress preview ./dist"
+    "preview": "vitepress preview"
   },
   "keywords": [],
   "author": "",
